# Democratized_AI

./: .env.example  .gitignore  .slugignore  Makefile  README.md  docker-compose.yml  heroku.yml
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: agents.py  approvals.py  connectors.py  health.py  rag.py  runs.py  tools.py
backend/app/core/: audit.py  auth.py  config.py  deps.py  logging.py  security.py
backend/app/db/migrations/: README.md
backend/app/domain/: models.py  rbac.py  schemas.py
backend/app/services/approvals/: gate.py
backend/app/services/connectors/: base.py  filesystem.py  http_api.py  sharepoint_mock.py
backend/app/services/llm_client/: base.py  openai_client.py  oss_client.py
backend/app/services/rag/: embed.py  ingest.py  retrieve.py
backend/app/services/tools/: base.py  calculator.py  http_get.py  iac_emitter.py
backend/app/workers/: worker.py
backend/tests/: test_health.py  test_policy.py  test_rag.py  test_root.py
frontend/: Dockerfile  jest.config.js  package.json  tsconfig.json
frontend/src/components/: AgentForm.tsx  ApprovalQueue.tsx  HealthCheck.tsx  Layout.tsx  RunTable.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: agents.tsx  (+3 more)
frontend/styles/: globals.css
frontend/tests/: smoke.js  smoke.spec.ts  smoke.test.tsx
infra/devcontainer/: .devcontainer.json
infra/terraform/: main.tf
ops/: threat_model.md
ops/policies/: example.rego
ops/postman/: collection.json
ops/runbooks/: operational_checklist.md
