[project]
name = "agentic-platform-backend"
version = "0.1.0"
description = "Agentic LLM platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "pydantic-settings",
  "sqlalchemy",
  "psycopg2-binary",
  "alembic",
  "redis",
  "rq",
  "openai",
  "httpx",
  "pyjwt",
  "requests (>=2.32.5,<3.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
